[package]
name = "mariners_warner"
version = "0.1.0"
authors = ["Gedalia Kott <gedkott@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"]}
serde = { version = "1.0.91", features = ["derive"] } 
serde_json = "1.0.39"
config = "0.9.3"
time = "0.1"
log = "0.4.6"
simplelog = "0.5.3"